Autor modificado y Ayuda añadida

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,12 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por Manuel Jiménez Pérez-Yarza.
 </p>
 
-<img src="/images/lechuck.jpg" />
+<img src="/images/Foto.jpg" />
+
+<p>
+    Más información en: <a href="https://github.com/manueljpy/quiz_2017">https://github.com/manueljpy/quiz_2017</a>
+</p>
 
