--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -9,7 +9,7 @@
             <% if (tip.accepted ||
                     (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
 
-                <%= tip.text %>
+                <%= tip.text %> <span id="autor"> (by <%= tip.Author ? tip.Author.username : "Anómino" %>) </span>
 
             <% } %>
 
@@ -20,7 +20,7 @@
 
             <% } %>
 
-            <% if ((session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
+            <% if ((session.user && (session.user.isAdmin || (tip.AuthorId && tip.AuthorId === session.user.id)))) { %>
 
                 <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
 
