Practica 53, nombre de autor aparece aunque no se haya aceptado

--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -9,7 +9,7 @@
             <% if (tip.accepted ||
                     (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
 
-                <%= tip.text %> <span id="autor"> (by <%= tip.Author ? tip.Author.username : "Anómino" %>) </span>
+                <%= tip.text %> 
 
             <% } %>
 
@@ -25,6 +25,8 @@
                 <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
 
             <% } %>
+
+            <span id="autor"> (by <%= tip.Author ? tip.Author.username : "Anómino" %>) </span>
 
         </li>
     <% } %>
